# chaos-project-2

./: .gitignore  .gitmodules  CMakeLists.txt  configure.bat  configure.sh  main.cpp
beamcast/: camera.cpp  camera.hpp  gui.cpp  gui.hpp  iskeypressed.cpp  iskeypressed.hpp  log.hpp  materials.cpp  materials.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  utils.cpp  utils.hpp
engine/: buffer_utils.cpp  buffer_utils.hpp  image_utils.cpp  image_utils.hpp  transformation.cpp  transformation.hpp
native/: dx12_nri.cpp  dx12_nri.hpp  dxc_include_handler.hpp  nri.cpp  nri.hpp  nriFactory.cpp  nriFactory.hpp  timer.hpp  unicode.cpp  unicode.hpp  vk_nri.cpp  vk_nri.hpp
shaders/: common_structs.hlsl  raygen.hlsl  resource_heap.hlsl  rt.hlsl  simple.hlsl
src/: nri.hpp  vk_nri.cpp  vk_nri.hpp
